--- a/styling/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/styling/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,11 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input{
+  border-color: red;
+  background: #ec9898;
+}
+.form-control.invalid label{
+  color: red;
+}
